PharmaDemo/src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firmware</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ModelM_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>ModelM__Category__c</referenceTo>
        <relationshipName>ModelM_Category_Lookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ModelM_Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Shareable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Information</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
</CustomObject>